--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-	"liveServer.settings.port": 5502,
 	"workbench.colorCustomizations": {
 		"activityBar.activeBackground": "#00b300",
 		"activityBar.background": "#00b300",
@@ -19,5 +18,6 @@
 		"titleBar.inactiveBackground": "#00800099",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "green"
+	"peacock.color": "green",
+	"liveServer.settings.port": 5502
 }
